--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,10 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="live your ADVENTURE with us" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta name="keywords" content="Naxos, boat trip, boat trips, island tour, watersports, adventure, greek island, greece, vacation">
+    <meta name="author" content="Konstantinos Digonis">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Sea Secret</title>
+    <title>Sea Secret boat trips</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
